# bias-model-test-bench

./: .gitignore  README.md  eagle_25.yml  environment.yml  gadget.yml  project_plan.md  pyproject.toml  setup.cfg  test.py
bias_bench/: Params.py  console_scripts.py  io.py  plot.py  predict.py
bias_bench/analysis/: images.py  one_point.py  three_point.py  two_point.py
bias_bench/benchmark_models/: TruncatedPowerLaw.py  truncated_powerlaw.py
examples/: continuous_config.yml  eagle_100_example.yml  eagle_25_example.yml  emcee_config  example_config.yml  gadget_example.yml  gadget_npe.yml  npe_model.py  run_standalone.py  test_config.yml  truncated_powerlaw.py  velmass_npe.yml
investigate_borg_bias_models/: bias.ipynb  checks_errors.py  forward_model.py  parameters.py  perform_opt.py  simple_forward_pass.py  try_full_loss_v1.py  try_full_loss_v2.py
investigate_borg_bias_models/RUN_SCRIPTS/: run1.sh  run2.sh  run3.sh  run4.sh  run5.sh
investigate_borg_bias_models/results/: 2_2_bias::BrokenPowerLaw_opt_parameters_v0.0.npy  slice_ref.npy
mock_data/: README.md  data.hdf5  eagle.hdf5  eagle_100_box.hdf5  eagle_100_box_ngrid64.hdf5  eagle_25_box.hdf5  eagle_25_box_galaxies.hdf5  eagle_25_box_haloes.hdf5  eagle_25_box_ngrid32.hdf5  eagle_25_box_ngrid64.hdf5  gadget_mock.hdf5  generate_mock_eagle_data.py  get_eagle_25_data.py  lgadget_500_box.hdf5  lgadget_500mpc_1024part_npe.hdf5  run.py
mock_data/training_generator/: cic.py
mock_data/training_generator/classes/: Eagle.py  SibeliusDark.py  Simulation.py
notes/: visualize_distributions.ipynb
plot_styles/: basic.mplstyle  nature.mplstyle  presentation.mplstyle  presentation_latex.mplstyle
plot_styles/aa/: aa_full.mplstyle  aa_intermediate.mplstyle  aa_single.mplstyle
snippets/: generalized_poisson.ipynb
src/bias_bench/: Params.py  __init__.py  console_scripts.py  constants.py  data_io.py  plot.py  predict.py  utils.py
src/bias_bench/analysis/: __init__.py  field_plots.py  one_point.py  three_point.py  two_point.py
src/bias_bench/benchmark_models/: BenchmarkModel.py  BorgModels.py  LinearBias.py  MeanPredictor.py  TruncatedPowerLaw.py  __init__.py  selector.py
src/bias_bench/likelihoods/: DataLikelihood.py  Gaussian.py  LogNormal.py  LogSkewNormal.py  NegativeBinomial.py  Poisson.py  __init__.py  selector.py
src/bias_bench/optimizer/: BaseOptimizer.py  __init__.py  emcee_minimize.py  scipy_minimize.py  selector.py
src/bias_bench/processing/: __init__.py  io.py  process.py  visualise_data.py
