[build-system]
requires = ["setuptools >= 61.0", "cython >= 0.29.0"]
build-backend = "setuptools.build_meta"

[project]
name = 'bias_bench'
version = '0.1'
description = 'Test bench for halo and galaxy bias models'
readme = 'README.md'

authors = [
    { name = "Stuart McAlpine", email = "stuart.mcalpine@fysik.su.se" },
    { name = "Simon Ding", email = "simon.ding@iap.fr" }
]
license = { file = 'LICENCE' }
classifiers = [
    'Programming Language :: Python :: 3',
]
keywords = ['galaxy bias', 'testbench', 'simulations', 'python']
requires-python = ">=3.7, <=3.11"
dependencies = [
    "h5py",
    "numpy >= 1.23.3",
    "matplotlib >= 3.6",
    "pandas",
    "numba",
    "scipy",
    "pyaml",
    "pyfftw >= 0.13",
    "pylians == 0.11",
]

[project.urls]
repository = "https://github.com/AsianTaco/bias-model-test-bench"

[tool.setuptools.packages.find]
where = ['src']

[project.optional-dependencies]
test = ['pytest']
notebook = ['jupyter']

[project.scripts]
galaxy-bias-benchmark = "bias_bench.console_scripts:run_test_bench"
optimise_borg_bias = "bias_bench.console_scripts:optimise_borg_bias"
bundle_catalogs = "bias_bench.console_scripts:bundle_catalogs"
