[meta-data]
name = bias_bench
version = attr: bias_bench.__version__
author = Stuart McAlpine, Simon Ding
author_email = your@email.address
url = https://catscatscats
description = Test bench for halo and galaxy bias models
long_description = file: README.md
long_description_content_type = text/markdown
keywords = cats, squirrels
license = super license
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages=bias_bench
python_requires = >=3.7, <3.11
install_requires =
    h5py
    numpy
    numba
    matplotlib
    scipy
    pyaml
    pyfftw
    pylians

[options.extras_require]
dev =
    pytest
